Solved Day 11 (whole).